[gd_scene load_steps=21 format=2]

[ext_resource path="res://NPC/NPC8.gd" type="Script" id=1]
[ext_resource path="res://well_prepared sucai/NPC/interact.png" type="Texture" id=2]
[ext_resource path="res://Shadows/MediumShadow.png" type="Texture" id=3]
[ext_resource path="res://well_prepared sucai/NPC/NPC_v8.png" type="Texture" id=4]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 4 )
region = Rect2( 1, 2, 15, 30 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 4 )
region = Rect2( 16, 2, 15, 30 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 4 )
region = Rect2( 31, 2, 15, 30 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 4 )
region = Rect2( 1, 32, 15, 30 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 4 )
region = Rect2( 16, 32, 15, 30 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 4 )
region = Rect2( 31, 32, 15, 30 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 4 )
region = Rect2( 1, 62, 15, 30 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 4 )
region = Rect2( 16, 62, 15, 30 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 4 )
region = Rect2( 31, 62, 15, 30 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 4 )
region = Rect2( 1, 92, 15, 30 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 4 )
region = Rect2( 16, 92, 15, 30 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 4 )
region = Rect2( 31, 92, 15, 30 )

[sub_resource type="SpriteFrames" id=99]
animations = [ {
"frames": [ SubResource( 87 ), SubResource( 88 ), SubResource( 89 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
}, {
"frames": [ SubResource( 90 ), SubResource( 91 ), SubResource( 92 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ SubResource( 93 ), SubResource( 94 ), SubResource( 95 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
}, {
"frames": [ SubResource( 96 ), SubResource( 97 ), SubResource( 98 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=100]
radius = 4.0
height = 8.0

[sub_resource type="CircleShape2D" id=101]
radius = 24.0208

[node name="NPC8" type="KinematicBody2D"]
pause_mode = 1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 7 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -2 )
frames = SubResource( 99 )
animation = "walk_right"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
rotation = 1.5708
shape = SubResource( 100 )

[node name="WanderController" parent="." instance=ExtResource( 5 )]
wander_range = 18

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -22 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 7 )
shape = SubResource( 101 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
